--- a/templates/helloworld/index.html.twig
+++ b/templates/helloworld/index.html.twig
@@ -25,7 +25,7 @@
             <li>
                 Your controller at
                 <code>
-                    <a href="{{ '/home/soabien/workspace/symfony/src/Infrastructure/Controller/HelloWorldApiController.php'|file_link(0) }}">
+                    <a href="{{ '/home/soabien/workspace/symfony/src/Infrastructure/Controller/HelloWorldController.php'|file_link(0) }}">
                        {{ controller_path}}
                     </a>
                 </code>
@@ -36,6 +36,13 @@
                     <a href="{{ '/home/soabien/workspace/symfony/templates/helloworld/index.html.twig'|file_link(0) }}">
                         templates/helloworld/index.html.twig
                     </a>
+                    <br>
+                    {{ data }}
+                    <br>
+                    {{ message }}
+                    <br>
+                    {{ status }}
+
                 </code>
             </li>
         </ul>
